--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="change-container">
-            <button id="change-coin">Изменить</button>
+            <button id="change-coin">Изменить 1</button>
             <div class="change-options" id="change-options">
                 <button class="coin-option" id="coin-option-1" data-coin="coin1.png">
                     <img src="coin1.png" alt="Coin 1">
