--- a/index.html
+++ b/index.html
@@ -3,53 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>МД Clicker 2</title>
+    <title>Coin Clicker</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
+        <div class="hotbar-container">
+            <div class="hotbar" id="hotbar"></div>
+            <div class="hotbar-value" id="hotbar-value">2000</div>
+        </div>
+
         <div class="coin-container">
             <img src="coin.png" alt="Coin" id="coin">
-            <div class="coin-count">Clicks: <span id="coin-count">0</span></div>
+            <div class="coin-count" id="coin-count">0</div>
         </div>
 
-        <div class="change-container">
-            <button id="change-coin">Изменить 1</button>
-            <div class="change-options" id="change-options">
-                <button class="coin-option" id="coin-option-1" data-coin="coin1.png">
-                    <img src="coin1.png" alt="Coin 1">
-                    <p>Coin 1</p>
-                    <span class="coin-count">Clicks: <span id="coin-count-1">0</span></span>
-                </button>
-                <button class="coin-option" id="coin-option-2" data-coin="coin2.png">
-                    <img src="coin2.png" alt="Coin 2">
-                    <p>Coin 2</p>
-                    <span class="coin-count">Clicks: <span id="coin-count-2">0</span></span>
-                </button>
-                <button class="coin-option" id="coin-option-3" data-coin="coin3.png">
-                    <img src="coin3.png" alt="Coin 3">
-                    <p>Coin 3</p>
-                    <span class="coin-count">Clicks: <span id="coin-count-3">0</span></span>
-                </button>
-                <button class="coin-option" id="coin-option-4" data-coin="coin4.png">
-                    <img src="coin4.png" alt="Coin 4">
-                    <p>Coin 4</p>
-                    <span class="coin-count">Clicks: <span id="coin-count-4">0</span></span>
-                </button>
-                <button id="back-button">Назад <-</button>
-            </div>
+        <div class="change-shop-container">
+            <button id="change-coin">Изменить</button>
+            <button id="shop-button">
+                <img src="shop.png" alt="Магазин" id="shop-icon">
+            </button>
         </div>
 
-        <div class="shop-container">
-            <button id="shop-button">Магазин</button>
-            <div class="shop-options" id="shop-options">
-                <div class="shop-item">
-                    <p>+1 Клик</p>
-                    <span class="shop-price" id="click-price">50</span>
-                    <button id="buy-click">Купить</button>
-                </div>
-                <button id="back-button-shop">Назад <-</button>
+        <div class="change-options" id="change-options">
+            <button class="coin-option" id="coin-option-1" data-coin="coin1.png">
+                <img src="coin1.png" alt="Coin 1">
+                <p>Coin 1</p>
+                <span class="coin-count" id="coin-count-1">0</span>
+            </button>
+            <button class="coin-option" id="coin-option-2" data-coin="coin2.png">
+                <img src="coin2.png" alt="Coin 2">
+                <p>Coin 2</p>
+                <span class="coin-count" id="coin-count-2">0</span>
+            </button>
+            <button class="coin-option" id="coin-option-3" data-coin="coin3.png">
+                <img src="coin3.png" alt="Coin 3">
+                <p>Coin 3</p>
+                <span class="coin-count" id="coin-count-3">0</span>
+            </button>
+            <button class="coin-option" id="coin-option-4" data-coin="coin4.png">
+                <img src="coin4.png" alt="Coin 4">
+                <p>Coin 4</p>
+                <span class="coin-count" id="coin-count-4">0</span>
+            </button>
+            <button id="back-button">Назад <-</button>
+        </div>
+
+        <div class="shop-options" id="shop-options">
+            <div class="shop-item">
+                <p>+1 Клик</p>
+                <span class="shop-price" id="click-price">50</span>
+                <button id="buy-click">Купить</button>
             </div>
+            <div class="shop-item">
+                <p>Прокачка Энергии</p>
+                <span class="shop-price" id="energy-price">3000</span>
+                <button id="buy-energy">Купить</button>
+            </div>
+            <button id="back-button-shop">Назад <-</button>
         </div>
     </div>
 
