--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <img id="coin-image" src="coin1.png" alt="Coin Image">
     <button id="change-button">Изменить</button>
     <button id="store-button">Магазин</button>
+
     <div id="change-menu" class="hidden">
         <button id="back-button">Назад ←</button>
         <button class="change-option" data-image="coin1.png">
@@ -29,15 +30,28 @@
         <button class="change-option" data-image="coin4.png">
             <img src="coin4.png" alt="Coin 4" width="50"> Монета 4
         </button>
-        
     </div>
+
     <div id="store-menu" class="hidden">
         <button id="upgrade-click">Прокачка кликов (+1) - 50</button>
         <button id="upgrade-energy">Прокачка энергии (+500) - 3000</button>
         <button id="reduce-regeneration">Уменьшение регенерации (на 0.1 сек) - 2000</button>
         <button id="back-store-button">Назад ←</button>
     </div>
+
     <div id="daily-reward-timer">До награды: --:--:--</div>
+
+    <!-- Режим разработчика -->
+    <div id="developer-mode-text">Режим разработчика</div>
+    <div id="developer-panel" class="hidden">
+        <input type="password" id="developer-password" placeholder="Введите пароль">
+        <button id="submit-password">Войти</button>
+    </div>
+
+    <div id="admin-panel" class="hidden">
+        <button id="reset-progress">Очистить весь прогресс</button>
+        
+
     <script src="script.js"></script>
 </body>
 </html>
